Better selector handling.. stomp can now deal with comparison operators correctly.
git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-apollo/trunk@1061978 13f79535-47bb-0310-9956-ffa450edef68